<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:text="@string/bill_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewBillAmount" android:textStyle="bold"
            android:textSize="20sp" android:textColor="#B71C1C" android:textAlignment="center"
            android:textAllCaps="true" android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTextEditBillAmount" android:gravity="center" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewBillAmount" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/seekBarTipPercent" app:layout_constraintVertical_bias="0.137"/>
    <TextView
            android:text="@string/tip_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewTipPercent" android:textStyle="bold"
            android:textSize="18sp" android:textColor="#B71C1C" android:textAlignment="center"
            android:layout_marginTop="28dp" app:layout_constraintTop_toBottomOf="@+id/editTextEditBillAmount"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:textAllCaps="true" app:layout_constraintHorizontal_bias="0.498"/>
    <SeekBar
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/seekBarTipPercent" android:max="50"
            android:progress="10"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.466" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.297"/>
    <TextView
            android:text="@string/_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewTip" android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/seekBarTipPercent"
            app:layout_constraintTop_toTopOf="@+id/seekBarTipPercent"
            app:layout_constraintStart_toEndOf="@+id/seekBarTipPercent" android:layout_marginStart="8dp"
    />
    <Button
            android:text="@string/calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonCalculate" android:textSize="18sp"
            android:textStyle="bold" app:layout_constraintTop_toBottomOf="@+id/seekBarTipPercent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textViewTotalBill" app:layout_constraintVertical_bias="0.838"/>
    <TextView
            android:text="@string/amounts_will_be_displayed_here"
            android:layout_width="263dp"
            android:layout_height="108dp"
            android:id="@+id/textViewTotalBill" android:textStyle="bold"
            android:textColor="#F57F17" android:textSize="18sp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textAlignment="center"/>
    <SeekBar
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/seekBarNumberOfPeople"
            app:layout_constraintTop_toBottomOf="@+id/seekBarTipPercent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.127"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.466" android:max="20" android:progress="1"/>
    <TextView
            android:text="@string/_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewNumberOfPeople"
            app:layout_constraintTop_toTopOf="@+id/seekBarNumberOfPeople"
            app:layout_constraintBottom_toBottomOf="@+id/seekBarNumberOfPeople"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/seekBarNumberOfPeople" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0"
            android:textSize="18sp" android:textStyle="bold"/>
    <TextView
            android:text="@string/number_of_people"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewPeople" android:textAllCaps="true"
            android:textColor="#B71C1C" android:textSize="18sp" android:textStyle="bold" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.345"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"/>
</androidx.constraintlayout.widget.ConstraintLayout>